@@ -7,6 +7,7 @@
            i18n_domain="opengever.ogds.base"
            package="opengever.ogds.base">
 
+    <include package=".browser" />
     <include package=".sections" />
     <include package=".viewlets" />
     <include package=".upgrades" />
