@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+
+  <javascript id="++resource++opengever.ogds.base/ogds_base.js" />
+
+</object>
