@@ -4,6 +4,9 @@ Changelog
 3.2.5 (unreleased)
 ------------------
 
+- Added mobile action and javascript for orgunit selector.
+  [Julian Infanger]
+
 - Fixed zipexport-enable upgrade step to match the new registry entry.
   With ftw.zipexport 1.2.0 the registry name changes which brakes our upgrade step.
   [lknoepfel]
